--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,9 @@
-{"subnets": ["192.168.142"]}
+#{"subnets": ["192.168.142"]}
+
+{
+    "subnets": [
+        "192.168.1",
+        "10.0.0",
+        "172.16.0"
+    ]
+}
